# scran.jl

./: Project.toml  README.md  build.sh
src/: filtercells.jl  groupedsizefactors.jl  initialize.jl  lognormcounts.jl  modelgenevar.jl  percelladtqcmetrics.jl  percellcrisprqcmetrics.jl  percellrnaqcmetrics.jl  runpca.jl  scran.jl  suggestadtqcfilters.jl  suggestcrisprqcfilters.jl  suggestrnaqcfilters.jl  test.jl  utils.jl
src/cpp/: CMakeLists.txt  testlib.cpp
src/cpp/src/: ScranMatrix.h  filter_cells.cpp  filter_cells.hpp  grouped_size_factors.cpp  grouped_size_factors.hpp  initialize_from_memory.cpp  initialize_from_memory.hpp  julia.cpp  log_norm_counts.cpp  log_norm_counts.hpp  model_gene_var.cpp  model_gene_var.hpp  pca_utils.h  per_cell_adt_qc_metrics.cpp  per_cell_adt_qc_metrics.hpp  per_cell_crispr_qc_metrics.cpp  per_cell_crispr_qc_metrics.hpp  per_cell_rna_qc_metrics.cpp  per_cell_rna_qc_metrics.hpp  run_blocked_pca.cpp  run_blocked_pca.hpp  run_multibatch_pca.cpp  run_multibatch_pca.hpp  run_pca.cpp  run_pca.hpp  suggest_adt_qc_filters.cpp  suggest_adt_qc_filters.hpp  suggest_crispr_qc_filters.cpp  suggest_crispr_qc_filters.hpp  suggest_rna_qc_filters.cpp  suggest_rna_qc_filters.h  suggest_rna_qc_filters.hpp
test/: filtercells.jl  groupedsizefactors.jl  initializesparsematrix.jl  lognormcounts.jl  modelgenevar.jl  percelladtqcmetrics.jl  percellcrisprqcmetrics.jl  percellrnaqcmetrics.jl  runpca.jl  runtests.jl  suggestadtqcfilters.jl  suggestcrisprqcfilters.jl  suggestrnaqcfilters.jl
